k8s/ingress.yaml
# k8s/ce-frontend/ingress.yaml
# k8s/ce-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ce-frontend-ingress
  namespace: aaron-dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:255945442255:certificate/XXXXXXXX
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: ce-grp-1.sctp-sandbox.com
      http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ce-frontend-svc
            port:
              number: 80
